--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -134,7 +134,7 @@
   }
 
   img {
-    max-width: 110px;
+    max-width: 200px; 
     border-radius: 50%;
 
     @include breakpoint($large) {
@@ -179,6 +179,8 @@
 
 .author__bio {
   margin: 0;
+  font-size: 0.9em;
+  font-style: italic;
 
   @include breakpoint($large) {
     margin-top: 10px;
