--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -256,7 +256,7 @@
   @include breakpoint($small) {
     float: left;
     margin-bottom: 0;
-    width: span(4 of 12);
+    width: span(3 of 12); //  I HAVE MODIFIED THIS FROM: span(3 of 12) --> span(3 of 12)
 
     &:nth-child(3n + 1) {
       clear: both;
@@ -272,6 +272,11 @@
       clear: none;
       margin-left: gutter(of 12);
     }
+
+    &:nth-child(3n + 4) { //  I HAVE ADDED THIS 
+      clear: none; //  I HAVE ADDED THIS 
+      margin-left: gutter(of 12); //  I HAVE ADDED THIS 
+    } //  I HAVE ADDED THIS 
 
     .feature__item-teaser {
       max-height: 200px;
