--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,132 +9,142 @@ search: false
 @import "minimal-mistakes"; // main partials
 
 
+// FOR THE TIMELINE IN OUTREACH
 
-
-// // FOR THE TIMELINE IN OUTREACH
-// /* The actual timeline (the vertical ruler) */
-// .timeline {
-// position: relative;
-// max-width: 1200px;
-// margin: 0 auto;
-// }
-
-// /* The actual timeline (the vertical ruler) */
-// .timeline::after {
-// content: '';
-// position: absolute;
-// width: 6px;
-// background-color: rgb(188, 188, 188);
-// top: 0;
-// bottom: 0;
-// left: 50%;
-// margin-left: -3px;
-// }
-
-// /* Container around content */
-// .container {
-// padding: 10px 30px;
-// position: relative;
-// background-color: inherit;
-// width: 50%;
-// }
-
-// /* The circles on the timeline */
-// .container::after {
-// content: '';
-// position: absolute;
-// width: 25px;
-// height: 25px;
-// right: -17px;
-// background-color: #f4ac5f;
-// border: 4px solid #f4ac5f;
-// top: 15px;
-// border-radius: 50%;
-// z-index: 1;
-// }
-
-// /* Place the container to the left */
-// .left {
-// left: 0;
-// }
-
-// /* Place the container to the right */
-// .right {
-// left: 50%;
-// }
-
-// /* Add arrows to the left container (pointing right) */
-// .left::before {
-// content: " ";
-// height: 0;
-// position: absolute;
-// top: 10px;
-// width: 0;
-// z-index: 1;
-// right: 30px;
-// border: medium solid rgb(188, 188, 188);
-// border-width: 10px 0 10px 10px;
-// border-color: transparent transparent transparent rgb(188, 188, 188);
-// }
-
-// /* Add arrows to the right container (pointing left) */
-// .right::before {
-// content: " ";
-// height: 0;
-// position: absolute;
-// top: 10px;
-// width: 0;
-// z-index: 1;
-// left: 30px;
-// border: medium solid rgb(188, 188, 188);
-// border-width: 10px 10px 10px 0;
-// border-color: transparent rgb(188, 188, 188) transparent transparent;
-// }
-
-// /* Fix the circle for containers on the right side */
-// .right::after {
-// left: -16px;
-// }
-
-// /* The actual content */
-// .content {
-// padding: 5px 10px;
-// background-color: transparent;
-// position: relative;
-// border-radius: 6px;
-// border: medium solid rgb(188, 188, 188);
-// border-width: 5px 5px 5px 5px;
-// }
-
-// /* Media queries - Responsive timeline on screens less than 600px wide */
-// @media screen and (max-width: 600px) {
-// /* Place the timelime to the left */
-// .timeline::after {
-//     left: 31px;
-// }
-
-// /* Full-width containers */
-// .container {
-//     width: 100%;
-//     padding-left: 70px;
-//     padding-right: 25px;
-// }
-
-// /* Make sure that all arrows are pointing leftwards */
-// .container::before {
-//     left: 60px;
-//     border: medium solid white;
-//     border-width: 10px 10px 10px 0;
-//     border-color: transparent white transparent transparent;
-// }
-
-// /* Make sure all circles are at the same spot */
-// .left::after, .right::after {
-//     left: 15px;
-// }
-
-// /* Make all right containers behave like the left ones */
-// .right {
-//     left: 0%;
-// }
-// }
+.ul {
+    list-style: none;
+    margin: 0 !important;
+    }
+    
+    .a {
+    text-decoration: none !important;
+    display: inline-block;
+    }
+    
+    .button:focus {
+    outline: none;
+    }
+    
+    .container {
+    width: 100%;
+    max-width: 1140px;
+    padding: 0 15px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    }
+    .timelines h2 {
+    text-align: center;
+    color: #fff;
+    font-weight: 600;
+    margin-bottom: 40px;
+    font-size: 32px;
+    }
+    .d-flex-2 {
+    display: flex;
+    align-items: center;
+    }
+    .timeline-area {
+    padding: 80px 0;
+    }
+    .all-timelines {
+    position: relative;
+    }
+    .timelines h2 {
+    text-align: center;
+    color: #fff;
+    font-weight: 600;
+    margin-bottom: 40px;
+    }
+    .all-timelines::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 100%;
+    width: 2px;
+    background: #efa22f;
+    top: 20px;
+    }
+    .single-timeline {
+    margin-bottom: 22px;
+    }
+    .timeline-blank {
+    width: 50%;
+    }
+    .timeline-text {
+    width: 50%;
+    padding-left: 30px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    position: relative;
+    }
+    .timeline-text h6 {
+    color: #f0f1f2;
+    font-weight: 900;
+    display: inline-block;
+    font-size: 1rem;
+    }
+    .timeline-text span {
+    color: #f0f1f2;
+    display: block;
+    width: 100%;
+    }
+    .single-timeline:nth-child(even) .timeline-text span {
+    text-align: right;
+    }
+    .t-square {
+    content: "";
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    left: -6px;
+    background: #efa22f;
+    }
+    .single-timeline:nth-child(even) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    }
+    .single-timeline:nth-child(even) .t-square {
+    right: -6px;
+    left: unset;
+    }
+    .single-timeline:nth-child(even) .timeline-text {
+    padding-left: 0;
+    padding-right: 30px;
+    text-align: right;
+    }
+    
+    @media all and (max-width: 991px) {}
+    @media all and (max-width: 768px) {
+    .all-timelines::before {
+        right: unset;
+        top: 0;
+    }
+    .single-timeline:nth-child(2n) .timeline-text {
+        padding-left: 30px;
+        padding-right: 0;
+        text-align: left;
+    }
+    .single-timeline:nth-child(2n) .t-square {
+        left: -6px;
+        right: unset;
+    }
+    .timeline-blank {
+        display: none;
+    }
+    .timeline-text {
+        width: 100%;
+    }
+    .single-timeline:nth-child(even) .timeline-text span {
+        text-align: left !important;
+    }
+    }
+    @media all and (max-width: 575px) {}
+    @media all and (max-width: 360px) {
+    .all-timelines::before {
+        top: 32px;
+    }
+    }
